# langgraph_data_analysis

./: .env  CLAUDE.md  README.md  README_Agentic.md  README_Agentic_RAG.md  README_RAG.md  agent.py  api.py  check_json_splitter.py  check_ports.py  demo_agentic_mcp.py  demo_agentic_rag.py  demo_rag.py  generate_image.py  pyproject.toml  rag_mcp_server.py  rag_utils.py  reinitialize_rag.py
.claude/: settings.local.json
.serena/: project.yml
chroma_db_v2/: chroma.sqlite3
database_docs/: 表字段说明.json  表字段说明.md
